--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-google-autocomplete": "^2.7.3",
+    "react-google-maps": "^9.4.5",
     "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
