--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-google-autocomplete": "^2.7.3",
-    "react-google-maps": "^9.4.5",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.37",
+    "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
     "eslint": "^8.53.0",
