--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_URL=http://localhost:5005/api
+VITE_API_URL=https://share-car-server.fly.dev/api
 GOOGLE_API_KEY=AIzaSyC3RuJsUQ3759MGeXPIp02-hIREZpkrLqs
 
 
